--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background: blue;
+    background: rgba(50, 73, 224, 0.222);
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -18,14 +18,15 @@ body {
     border-radius: 20px;
     box-shadow: 0 20px 40px rgba(0,0,0,0.1);
     padding: 40px;
-    max-width: 900px;
+    max-width: 1500px;
+    min-height: 500px;
     width: 90%;
     text-align: center;
 }
 
 .title {
     font-size: 3rem;
-    color: yellow;
+    color: rgb(96, 183, 135);
     margin-bottom: 20px;
     text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
 }
@@ -37,11 +38,11 @@ body {
 }
 
 .btn {
-    background: black;
+    background: rgba(168, 47, 47, 0.662);
     color: white;
     border: none;
-    padding: 15px 30px;
-    margin: 10px;
+    padding: 15px 60px;
+    margin: 60px auto 40px auto;
     border-radius: 10px;
     font-size: 1.1rem;
     cursor: pointer;
@@ -53,9 +54,6 @@ body {
     box-shadow: 0 10px 20px rgba(0,0,0,0.2);
 }
 
-.btn.secondary {
-    background: linear-gradient(45deg, #8a693b, #f5576c);
-}
 
 .game-setup {
     display: none;
@@ -93,14 +91,14 @@ body {
     position: relative;
     width: 60px;
     height: 30px;
-    background: #ccc;
+    background: #ff0000;
     border-radius: 15px;
     cursor: pointer;
     transition: background 0.3s;
 }
 
 .toggle.active {
-    background: #ffffff;
+    background: #00ff3c;
 }
 
 .toggle::after {
@@ -108,7 +106,7 @@ body {
     position: absolute;
     width: 26px;
     height: 26px;
-    background: white;
+    background: rgba(0, 0, 0, 0.447);
     border-radius: 50%;
     top: 2px;
     left: 2px;
